# FunctionStore

./: .gitignore  README.md
functions/hifini/signin/: README.md  main.py  requirements.txt
functions/spider/github/trending/: .env  pyproject.toml  requirements.txt  trending.py
