[project]
name = "trending"
version = "0.1.0"
description = "Github Trending Spider"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "appwrite==11.0.0",
    "certifi==2025.6.15",
    "charset-normalizer==3.4.2",
    "cssselect==1.3.0",
    "idna==3.10",
    "jmespath==1.0.1",
    "lxml==5.4.0",
    "packaging==25.0",
    "parsel==1.10.0",
    "requests==2.32.4",
    "urllib3==2.4.0",
    "w3lib==2.3.1",
]
